{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 131,
  "lineage": "a628d04f-58a4-8a12-64a0-0eea8cc10461",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Site1Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Servers-rg/providers/Microsoft.Network/networkInterfaces/az902-Site1Server-nic",
            "internal_domain_name_suffix": "k2i4oty23bqejahb42t5cwbcod.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "az902-Site1Server-ipc",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Servers-rg/providers/Microsoft.Network/publicIPAddresses/az902-Site1Server-pip",
                "subnet_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az902-Site1-vnet/subnets/az902-Site1Server-sub"
              }
            ],
            "location": "swedencentral",
            "mac_address": "60-45-BD-C9-14-3B",
            "name": "az902-Site1Server-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "az902-Servers-rg",
            "virtual_machine_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Servers-rg/providers/Microsoft.Compute/virtualMachines/az902-Site1Server-vm"
          },
          "dependencies": [
            "azurerm_public_ip.Site1Server",
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site1Net",
            "azurerm_subnet.Site1SubSer",
            "azurerm_virtual_network.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Site2Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Servers-rg/providers/Microsoft.Network/networkInterfaces/az902-Site2Server-nic",
            "internal_domain_name_suffix": "ybfjhq0rewpuzpu5g2csjh2e3c.milx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "az902-Site2Server-ipc",
                "primary": true,
                "private_ip_address": "172.16.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Servers-rg/providers/Microsoft.Network/publicIPAddresses/az902-Site2Server-pip",
                "subnet_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az902-Site2-vnet/subnets/az902-Site2Server-sub"
              }
            ],
            "location": "italynorth",
            "mac_address": "7C-1E-52-1E-B0-9C",
            "name": "az902-Site2Server-nic",
            "private_ip_address": "172.16.0.4",
            "private_ip_addresses": [
              "172.16.0.4"
            ],
            "resource_group_name": "az902-Servers-rg",
            "virtual_machine_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Servers-rg/providers/Microsoft.Compute/virtualMachines/az902-Site2Server-vm"
          },
          "dependencies": [
            "azurerm_public_ip.Site2Server",
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site2Net",
            "azurerm_subnet.Site2SubSer",
            "azurerm_virtual_network.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "Site1Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Servers-rg/providers/Microsoft.Network/networkInterfaces/az902-Site1Server-nic|/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site1Network-rg/providers/Microsoft.Network/networkSecurityGroups/az902-Site1-nsg",
            "network_interface_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Servers-rg/providers/Microsoft.Network/networkInterfaces/az902-Site1Server-nic",
            "network_security_group_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site1Network-rg/providers/Microsoft.Network/networkSecurityGroups/az902-Site1-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.Site1Server",
            "azurerm_network_security_group.Site1BSG",
            "azurerm_public_ip.Site1Server",
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site1Net",
            "azurerm_subnet.Site1SubSer",
            "azurerm_virtual_network.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "Site2Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Servers-rg/providers/Microsoft.Network/networkInterfaces/az902-Site2Server-nic|/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site2Network-rg/providers/Microsoft.Network/networkSecurityGroups/az902-Site2-nsg",
            "network_interface_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Servers-rg/providers/Microsoft.Network/networkInterfaces/az902-Site2Server-nic",
            "network_security_group_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site2Network-rg/providers/Microsoft.Network/networkSecurityGroups/az902-Site2-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.Site2Server",
            "azurerm_network_security_group.Site2BSG",
            "azurerm_public_ip.Site2Server",
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site2Net",
            "azurerm_subnet.Site2SubSer",
            "azurerm_virtual_network.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Site1BSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site1Network-rg/providers/Microsoft.Network/networkSecurityGroups/az902-Site1-nsg",
            "location": "swedencentral",
            "name": "az902-Site1-nsg",
            "resource_group_name": "az902-Site1Network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1010,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Site2BSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site2Network-rg/providers/Microsoft.Network/networkSecurityGroups/az902-Site2-nsg",
            "location": "italynorth",
            "name": "az902-Site2-nsg",
            "resource_group_name": "az902-Site2Network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1010,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "CoreNetworkGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-CoreNetwork-rg/providers/Microsoft.Network/publicIPAddresses/az902-VPN-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.79.159.141",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "az902-VPN-pip",
            "resource_group_name": "az902-CoreNetwork-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.CoreNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Site1Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "az902-1ite1server",
            "fqdn": "az902-1ite1server.swedencentral.cloudapp.azure.com",
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Servers-rg/providers/Microsoft.Network/publicIPAddresses/az902-Site1Server-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.223.99.191",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "az902-Site1Server-pip",
            "resource_group_name": "az902-Servers-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Site2Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "az902-site2server",
            "fqdn": "az902-site2server.italynorth.cloudapp.azure.com",
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Servers-rg/providers/Microsoft.Network/publicIPAddresses/az902-Site2Server-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.232.184.78",
            "ip_version": "IPv4",
            "location": "italynorth",
            "name": "az902-Site2Server-pip",
            "resource_group_name": "az902-Servers-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "CoreNetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-CoreNetwork-rg/providers/Microsoft.Network/virtualNetworks/az902-CoreNetwork-vnet/subnets/az902-CoreNetwork-sub",
            "name": "az902-CoreNetwork-sub",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az902-CoreNetwork-rg",
            "virtual_network_name": "az902-CoreNetwork-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.CoreNetwork",
            "azurerm_virtual_network.CoreNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "CoreNetworkGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.7.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-CoreNetwork-rg/providers/Microsoft.Network/virtualNetworks/az902-CoreNetwork-vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az902-CoreNetwork-rg",
            "virtual_network_name": "az902-CoreNetwork-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.CoreNetwork",
            "azurerm_virtual_network.CoreNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Site1SubSer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az902-Site1-vnet/subnets/az902-Site1Server-sub",
            "name": "az902-Site1Server-sub",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az902-Site1Network-rg",
            "virtual_network_name": "az902-Site1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.Site1Net",
            "azurerm_virtual_network.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Site2SubSer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az902-Site2-vnet/subnets/az902-Site2Server-sub",
            "name": "az902-Site2Server-sub",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az902-Site2Network-rg",
            "virtual_network_name": "az902-Site2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.Site2Net",
            "azurerm_virtual_network.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "Site1BSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az902-Site1-vnet/subnets/az902-Site1Server-sub",
            "network_security_group_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site1Network-rg/providers/Microsoft.Network/networkSecurityGroups/az902-Site1-nsg",
            "subnet_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az902-Site1-vnet/subnets/az902-Site1Server-sub"
          },
          "dependencies": [
            "azurerm_network_security_group.Site1BSG",
            "azurerm_resource_group.Site1Net",
            "azurerm_subnet.Site1SubSer",
            "azurerm_virtual_network.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "Site2BSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az902-Site2-vnet/subnets/az902-Site2Server-sub",
            "network_security_group_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site2Network-rg/providers/Microsoft.Network/networkSecurityGroups/az902-Site2-nsg",
            "subnet_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az902-Site2-vnet/subnets/az902-Site2Server-sub"
          },
          "dependencies": [
            "azurerm_network_security_group.Site2BSG",
            "azurerm_resource_group.Site2Net",
            "azurerm_subnet.Site2SubSer",
            "azurerm_virtual_network.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "CoreNetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/21"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d9912afd-ec1b-47bf-a2ff-c9fcc43c6080",
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-CoreNetwork-rg/providers/Microsoft.Network/virtualNetworks/az902-CoreNetwork-vnet",
            "location": "northeurope",
            "name": "az902-CoreNetwork-vnet",
            "resource_group_name": "az902-CoreNetwork-rg",
            "subnet": [
              {
                "address_prefix": "10.10.0.0/24",
                "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-CoreNetwork-rg/providers/Microsoft.Network/virtualNetworks/az902-CoreNetwork-vnet/subnets/az902-CoreNetwork-sub",
                "name": "az902-CoreNetwork-sub"
              },
              {
                "address_prefix": "10.10.7.0/24",
                "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-CoreNetwork-rg/providers/Microsoft.Network/virtualNetworks/az902-CoreNetwork-vnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.CoreNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Site1Net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/21"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4fe71157-e81c-4460-80e1-f727f1582273",
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az902-Site1-vnet",
            "location": "swedencentral",
            "name": "az902-Site1-vnet",
            "resource_group_name": "az902-Site1Network-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az902-Site1-vnet/subnets/az902-Site1Server-sub",
                "name": "az902-Site1Server-sub",
                "security_group": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site1Network-rg/providers/Microsoft.Network/networkSecurityGroups/az902-Site1-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Site2Net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/21"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c3934ac0-2551-4c9f-be9f-3705249f84ea",
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az902-Site2-vnet",
            "location": "italynorth",
            "name": "az902-Site2-vnet",
            "resource_group_name": "az902-Site2Network-rg",
            "subnet": [
              {
                "address_prefix": "172.16.0.0/24",
                "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az902-Site2-vnet/subnets/az902-Site2Server-sub",
                "name": "az902-Site2Server-sub",
                "security_group": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-Site2Network-rg/providers/Microsoft.Network/networkSecurityGroups/az902-Site2-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "CoreNetworkVPN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.10.7.254"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "13.79.159.141"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-CoreNetwork-rg/providers/Microsoft.Network/virtualNetworkGateways/az902-VPN-vnetgw",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-CoreNetwork-rg/providers/Microsoft.Network/publicIPAddresses/az902-VPN-pip",
                "subnet_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az902-CoreNetwork-rg/providers/Microsoft.Network/virtualNetworks/az902-CoreNetwork-vnet/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "northeurope",
            "name": "az902-VPN-vnetgw",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "az902-CoreNetwork-rg",
            "sku": "VpnGw1",
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_client_configuration": [
              {
                "address_space": [
                  "192.168.254.0/24"
                ],
                "revoked_certificate": [
                  {
                    "name": "Verizon-Global-Root-CA",
                    "thumbprint": "912198EEF23DCAC40939312FEE97DD560BAE49B1"
                  }
                ],
                "root_certificate": [
                  {
                    "name": "DigiCert-Federated-ID-Root-CA",
                    "public_cert_data": "MIIDuzCCAqOgAwIBAgIQCHTZWCM+IlfFIRXIvyKSrjANBgkqhkiG9w0BAQsFADBn\nMQswCQYDVQQGEwJVUzEVMBMGA1UEChMMRGlnaUNlcnQgSW5jMRkwFwYDVQQLExB3\nd3cuZGlnaWNlcnQuY29tMSYwJAYDVQQDEx1EaWdpQ2VydCBGZWRlcmF0ZWQgSUQg\nUm9vdCBDQTAeFw0xMzAxMTUxMjAwMDBaFw0zMzAxMTUxMjAwMDBaMGcxCzAJBgNV\nBAYTAlVTMRUwEwYDVQQKEwxEaWdpQ2VydCBJbmMxGTAXBgNVBAsTEHd3dy5kaWdp\nY2VydC5jb20xJjAkBgNVBAMTHURpZ2lDZXJ0IEZlZGVyYXRlZCBJRCBSb290IENB\nMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAvAEB4pcCqnNNOWE6Ur5 [...]
                  }
                ],
                "vpn_auth_types": [
                  "Certificate"
                ],
                "vpn_client_protocols": [
                  "IkeV2",
                  "OpenVPN"
                ]
              }
            ],
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.CoreNetworkGW",
            "azurerm_resource_group.CoreNetwork",
            "azurerm_subnet.CoreNetworkGW",
            "azurerm_virtual_network.CoreNetwork"
          ]
        }
      ]
    }
  ]
}